--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -35,17 +35,12 @@ very patient.
 
 
 
-Most of all, this dissertation is dedicated to my beloved family. My wife, Kelly,
-has been extraordinarily supportive and has made countless sacrifices throughout the entire
-process. My two children, Tom and Keren, have also motivated me to accomplish this dissertation in a timely manner. I hope I have made you both proud. I wish to express my
+Most of all, this dissertation is dedicated to my beloved family. My wife, Kelly, has been extraordinarily supportive and has made countless sacrifices throughout the entire
+process. My two children, Tom and Keren, have also motivated me to accomplish this dissertation in a timely manner. I hope I have made you all proud. I wish to express my
 sincere gratitude to my parents and family for their exceptional love and support. Their constant support for me and my progress during this entire journey have allowed me
 to successfully complete this project. 
 \par\noindent
-I would like to express the deepest appreciation for my Ph.D. advisor, Professor Howell, for his continual supervision and valuable feedback. He
-has provided me with insightful comments on my research that have been a substantial aid in this accomplishment. Without his guidance and persistent support, I would never have
-been able to complete my dissertation. Further, I extend my gratitude to the staff of the Hebrew University workshop headed by Avner for their assistance in designing and their careful manufacturing of the experiment components. I know that required a great deal of investment.
-
-
+I would like to express my deepest appreciation for my advisor, Professor Howell, for his continual supervision, valuable feedback, guidance and persistent support. He has provided me with insightful comments on my research that have been a substantial aid in this accomplishment. Further, I extend my gratitude to the staff of the Hebrew University workshop headed by Avner for their assistance in designing and their careful manufacturing of the experiment components. Their professional support was extremely significant to the success of my research project.
 \par\noindent
 
 
