--- a/Presentation.tex
+++ b/Presentation.tex
@@ -27,19 +27,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 % Thesis Info - first page 
 	% title
 		\title[Gravimetric Sensing Aided by Radiation Cooling]{Gravimetric Sensing Aided by Radiation Cooling}		
@@ -299,20 +286,7 @@
 	\end{itemize}
 \end{frame}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-\section{Motivation}
+\section{Methods and results}
 
 \subsection[Basic Problem]{The basic problem that we have studed}
 
