--- a/Presentation.tex
+++ b/Presentation.tex
@@ -257,7 +257,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Damping process}
+\begin{frame}{Experiment noises}
 	\begin{itemize}
 		
 		\item Assuming above basic energy level the quantum uncertainty due to thermal energy is temperature dependent: $\delta\theta = \sqrt{\frac{k_B T}{\kappa}} \approx 4\cdot 10^{-8} [rad]$.
