--- a/Presentation.tex
+++ b/Presentation.tex
@@ -288,6 +288,27 @@
 
 \section{Methods and results}
 
+\section{Summary and conclusion}
+\begin{frame}{Gravitational measurement}
+	\begin{itemize}
+		
+		
+		\item The study purpose was to explore possibilities of improving the Cavendish apparatus gravitational measurement (sensitivity and integration time). 
+		\pause
+		\item The results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. When damping beyond the thermal energy quantum uncertainty, the damping process can assumed to effectively cool down the torsional pendulum temperature and lower the fundamental limit of the measurement.
+		\pause
+		\item The study contribution is that with the right conditions, the damping process allows to cool the torsional pendulum down to the Brownian motion limit, resulting with gravitational measurement sensitivity higher than the current state of the art.
+		\pause
+		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
+	\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
 \subsection[Basic Problem]{The basic problem that we have studed}
 
 \begin{frame}{Slide Title \#1}
