--- a/Presentation.tex
+++ b/Presentation.tex
@@ -293,9 +293,9 @@
 	\begin{itemize}
 		
 		
-		\item The study purpose was to explore possibilities of improving the Cavendish apparatus gravitational measurement (sensitivity and integration time). 
+		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\pause
-		\item The results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. When damping beyond the thermal energy quantum uncertainty, the damping process can assumed to effectively cool down the torsional pendulum temperature and lower the fundamental limit of the measurement.
+		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. When damping beyond the thermal energy quantum uncertainty, the damping process effectively cools down the pendulum temperature (lower  measurement fundamental limit).
 		\pause
 		\item The study contribution is that with the right conditions, the damping process allows to cool the torsional pendulum down to the Brownian motion limit, resulting with gravitational measurement sensitivity higher than the current state of the art.
 		\pause
