--- a/Presentation.tex
+++ b/Presentation.tex
@@ -295,9 +295,10 @@
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\pause
-		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. When damping beyond the thermal energy quantum uncertainty, the damping process effectively cools down the pendulum temperature (lower  measurement fundamental limit).
+		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
+		\item When damping beyond the thermal quantum uncertainty, damping process effectively cools down the pendulum temperature (lower measurement fundamental limit).
 		\pause
-		\item The study contribution is that with the right conditions, the damping process allows to cool the torsional pendulum down to the Brownian motion limit, resulting with gravitational measurement sensitivity higher than the current state of the art.
+		\item Study contribution is that with the right conditions, the damping process allows to cool the torsional pendulum down to the Brownian motion limit, resulting with gravitational measurement sensitivity higher than the current state of the art.
 		\pause
 		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
