--- a/Presentation.tex
+++ b/Presentation.tex
@@ -291,19 +291,29 @@
 \section{Summary and conclusion}
 \begin{frame}{Gravitational measurement}
 	\begin{itemize}
-		
+		\framesubtitle{Study achievements}
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\pause
 		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
 		\item When damping beyond the thermal quantum uncertainty, damping process effectively cools down the pendulum temperature (lower measurement fundamental limit).
-		\pause
+		
+		
+	\end{itemize}
+\end{frame}
+
+\section{Summary and conclusion}
+\begin{frame}{Gravitational measurement}
+	\begin{itemize}
+		\framesubtitle{Study contribution}
+		
+		
+		
 		\item Study contribution is that with the right conditions, damping process allows cooling the pendulum to the Brownian limit, resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
 		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
-
 
 
 
