--- a/Presentation.tex
+++ b/Presentation.tex
@@ -309,9 +309,11 @@
 		
 		
 		
-		\item Study contribution is that with the right conditions, damping process allows cooling the pendulum to the Brownian limit, resulting with higher gravimetric measurement sensitivity than current state of the art.
+		\item Study contribution is that with the right conditions, damping process allows cooling the pendulum to the Brownian limit. 
+		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
-		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
+		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). 
+		\item The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
 
