--- a/Presentation.tex
+++ b/Presentation.tex
@@ -313,7 +313,7 @@
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
 		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). 
-		\item The next stage would include a non linear approximation of the torsional pendulum motion (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
+		\item The next stage would include a non linear motion approximation (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
 
