--- a/Presentation.tex
+++ b/Presentation.tex
@@ -312,7 +312,7 @@
 		\item Study contribution is that with the right conditions, damping process allows cooling the pendulum to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
-		\item PID feedback might not be the best control algorithm (linear motion approximation, maintenance of the right tuning parameters). 
+		\item PID feedback might not be the best control algorithm (linear motion approximation, right parameters maintenance). 
 		\item The next stage would include a non linear motion approximation (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
