--- a/Presentation.tex
+++ b/Presentation.tex
@@ -296,7 +296,7 @@
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\pause
 		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
-		\item When damping beyond the thermal quantum uncertainty, damping process effectively cools down the pendulum temperature (lower measurement fundamental limit).
+		\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
 		
 		
 	\end{itemize}
