--- a/Presentation.tex
+++ b/Presentation.tex
@@ -294,7 +294,7 @@
 		\framesubtitle{Study achievements}
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
-		\item Designing of a torsional pendulum with reduced noises and active damping of the motion. 
+		\item Design of a long period torsional pendulum with reduced noises and active damping of the motion. 
 		\pause
 		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
 		\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
