--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,7 +56,8 @@
 		\item Torsional pendulum is an angular harmonic oscillator made of a mass hung by a string. 
 		\item The restoring torque causes sinusoidal oscillations.
 		\pause
-		\item Damped oscillator if there is a damping torque opposite to the velocity.
+		\item Damped oscillator if there is a damping torque opposite to the velocity $\tau = -b\dot{\theta}$.
+		\item Undamped; harmonic oscillations without decay.
 		
 	\end{itemize}
 \end{frame}
@@ -64,7 +65,9 @@
 
 % frame 2
 \begin{frame}{Damped oscillator}
-	
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
+    \end{center}
 	\begin{itemize}	
 		\item The pendulum is a damped oscillator if there is a damping torque opposite to the angular velocity $\tau = -b\dot{\theta}$.
 		\pause
@@ -72,18 +75,17 @@
 		\pause
 		\item The damping ratio, $\xi$, determines the oscillator's motion: underdamped, critically damped or overdamped.
 	\end{itemize}
-	\begin{center}		
-		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
-    \end{center}
+	
 	
 \end{frame}
 
 % frame 3
 \begin{frame}{Damped oscillator}
-	
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
+    \end{center}
 	\begin{itemize}
-		\item Undamped; harmonic oscillations without decay.
-		\pause
+		
 		\item Underdamped; oscillations amplitude decreases in time while oscillating with a lower frequency.
 		\pause
 		\item Critically damped; oscillator cannot oscillate and decays exponentially to equilibrium position.
