--- a/Presentation.tex
+++ b/Presentation.tex
@@ -53,8 +53,7 @@
     \end{center}
 	\begin{itemize}
 
-		\item Torsional pendulum is an angular harmonic oscillator made of a mass hung by a string. 
-		\item The restoring torque causes sinusoidal oscillations.
+		\item Torsional pendulum is an angular harmonic oscillator with restoring torque, made of a mass hung by a string. 
 		\pause
 		\item Damped oscillator if there is a damping torque opposite to the velocity $\tau = -b\dot{\theta}$.
 		\item Undamped; harmonic oscillations without decay.
