--- a/Presentation.tex
+++ b/Presentation.tex
@@ -53,32 +53,14 @@
     \end{center}
 	\begin{itemize}
 
-		\item Torsional pendulum is an angular harmonic oscillator with restoring torque, made of a mass hung by a string. 
+		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\pause
 		\item Damped oscillator if there is a damping torque opposite to the velocity $\tau = -b\dot{\theta}$.
-		\item Undamped; harmonic oscillations without decay.
+		\item When undamped; harmonic oscillations without decay.
 		
 	\end{itemize}
 \end{frame}
-
-
 % frame 2
-\begin{frame}{Damped oscillator}
-	\begin{center}		
-		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
-    \end{center}
-	\begin{itemize}	
-		\item The pendulum is a damped oscillator if there is a damping torque opposite to the angular velocity $\tau = -b\dot{\theta}$.
-		\pause
-		\item The damped motion is given by $\ddot{\theta} + 2\xi\omega_0\dot{\theta} + \omega_0^2\theta = 0$.
-		\pause
-		\item The damping ratio, $\xi$, determines the oscillator's motion: underdamped, critically damped or overdamped.
-	\end{itemize}
-	
-	
-\end{frame}
-
-% frame 3
 \begin{frame}{Damped oscillator}
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
@@ -94,6 +76,22 @@
 		\item The pendulum is a driven oscillator if there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
 \end{frame}
+
+% frame 3 - skip
+\begin{frame}{Damped oscillator}
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
+    \end{center}
+	\begin{itemize}	
+		\item The pendulum is a damped oscillator if there is a damping torque opposite to the angular velocity $\tau = -b\dot{\theta}$.
+		\item The damped motion is given by $\ddot{\theta} + 2\xi\omega_0\dot{\theta} + \omega_0^2\theta = 0$.
+		\item The damping ratio, $\xi$, determines the oscillator's motion: underdamped, critically damped or overdamped.
+	\end{itemize}
+	
+	
+\end{frame}
+
+
 \subsection{Gravity measurement}
 % frame 1
 \begin{frame}{Gravitational field}
