--- a/Presentation.tex
+++ b/Presentation.tex
@@ -68,12 +68,10 @@
 	\begin{itemize}
 		
 		\item Underdamped; oscillations amplitude decreases in time while oscillating with a lower frequency.
-		\pause
-		\item Critically damped; oscillator cannot oscillate and decays exponentially to equilibrium position.
-		\pause
+		\item Critically damped; exponential decay to equilibrium position.
 		\item Overdamped; oscillator with exponential decay and longer damping time than critical damping. 
 		\pause
-		\item The pendulum is a driven oscillator if there is also a time-dependent torque $\tau(t)$.
+		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
 \end{frame}
 
