--- a/Presentation.tex
+++ b/Presentation.tex
@@ -68,8 +68,8 @@
 	\begin{itemize}
 		
 		\item Underdamped; oscillations amplitude decreases in time while oscillating with a lower frequency.
-		\item Critically damped; exponential decay to equilibrium position.
-		\item Overdamped; oscillator with exponential decay and longer damping time than critical damping. 
+		\item Critically damped; exponential decay to equilibrium.
+		\item Overdamped; exponential decay with longer damping time than critical damping. 
 		\pause
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
