--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,7 +56,7 @@
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\pause
 		\item Damped oscillator if there is a damping torque opposite to the velocity $\tau = -b\dot{\theta}$.
-		\item When undamped; harmonic oscillations without decay.
+		\item Undamped oscillator; harmonic oscillations without decay.
 		
 	\end{itemize}
 \end{frame}
