--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,7 +69,7 @@
 		
 		\item Underdamped; oscillations amplitude decreases in time while oscillating with a lower frequency.
 		\item Critically damped; exponential decay to equilibrium.
-		\item Overdamped; exponential decay with longer damping time than critical damping. 
+		\item Overdamped; exponential decay with longer damping time. 
 		\pause
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 	\end{itemize}
