--- a/Presentation.tex
+++ b/Presentation.tex
@@ -55,8 +55,8 @@
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\pause
-		\item Damped oscillator if there is a damping torque opposite to the velocity $\tau = -b\dot{\theta}$.
 		\item Undamped oscillator; harmonic oscillations without decay.
+		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$.
 		
 	\end{itemize}
 \end{frame}
