--- a/Presentation.tex
+++ b/Presentation.tex
@@ -97,9 +97,9 @@
 	\begin{itemize}
 		\item Newton's law of universal gravitation: $\overrightarrow{F}(r) = \frac{GMm}{r^2}\hat{r}$
 		\pause
-		\item Since the gravitational constant is small, the force is weak.
+		\item The field consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(r)  = \frac{GM}{r^2}\hat{r}$ 
 		\pause
-		\item The gravitational field of mass $M$ is consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(r) = \frac{\overrightarrow{F}(r)}{m} = \frac{GM}{r^2}\hat{r}$ 
+		\item Since the gravitational constant is small $G = $, force is weak and hard to measure.
 		\end{itemize}
 \end{frame}
 % frame 2
