--- a/Presentation.tex
+++ b/Presentation.tex
@@ -93,13 +93,15 @@
 \subsection{Gravity measurement}
 % frame 1
 \begin{frame}{Gravitational field}
-	
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{gravity.png}
+    \end{center}
 	\begin{itemize}
 		\item Newton's law of universal gravitation: $\overrightarrow{F}(r) = \frac{GMm}{r^2}\hat{r}$
 		\pause
-		\item The field consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(r)  = \frac{GM}{r^2}\hat{r}$ 
+		\item The gravitational field of mass $M$ is consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(r) = \frac{\overrightarrow{F}(r)}{m} = \frac{GM}{r^2}\hat{r}$ 
 		\pause
-		\item Since the gravitational constant is small $G = $, force is weak and hard to measure.
+		\item Since the gravitational constant is small, the force is weak.
 		\end{itemize}
 \end{frame}
 % frame 2
