--- a/Presentation.tex
+++ b/Presentation.tex
@@ -97,9 +97,9 @@
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{gravity.png}
     \end{center}
 	\begin{itemize}
-		\item Newton's law of universal gravitation: $\overrightarrow{F}(r) = \frac{GMm}{r^2}\hat{r}$
+		\item Newton's law of universal gravitation: $\overrightarrow{F} = \frac{GMm}{r^2}\hat{r}$
 		\pause
-		\item The gravitational field of mass $M$ is consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(r) = \frac{\overrightarrow{F}(r)}{m} = \frac{GM}{r^2}\hat{r}$ 
+		\item The field of mass consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
 		\pause
 		\item Since the gravitational constant is small, the force is weak.
 		\end{itemize}
