--- a/Presentation.tex
+++ b/Presentation.tex
@@ -99,7 +99,7 @@
 	\begin{itemize}
 		\item Newton's law of universal gravitation: $\overrightarrow{F} = \frac{GMm}{r^2}\hat{r}$
 		\pause
-		\item The field of mass consisted of vectors pointing directly towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
+		\item The field consists vectors pointing directly towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
 		\pause
 		\item Since the gravitational constant is small, the force is weak.
 		\end{itemize}
