--- a/Presentation.tex
+++ b/Presentation.tex
@@ -94,12 +94,12 @@
 % frame 1
 \begin{frame}{Gravitational field}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{gravity.png}
+		\includegraphics[width=0.3\textwidth,keepaspectratio]{gravity.png}
     \end{center}
 	\begin{itemize}
 		\item Newton's law of universal gravitation: $\overrightarrow{F} = \frac{GMm}{r^2}\hat{r}$
 		\pause
-		\item The field consists vectors pointing directly towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
+		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
 		\pause
 		\item Since the gravitational constant is small, the force is weak.
 		\end{itemize}
