--- a/Presentation.tex
+++ b/Presentation.tex
@@ -98,9 +98,7 @@
     \end{center}
 	\begin{itemize}
 		\item Newton's law of universal gravitation: $\overrightarrow{F} = \frac{GMm}{r^2}\hat{r}$
-		\pause
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
-		\pause
 		\item Since the gravitational constant is small, the force is weak.
 		\end{itemize}
 \end{frame}
@@ -111,11 +109,12 @@
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
-		\item The Cavendish apparatus measures the gravitational force of test mass $M$ using a torsional pendulum.
+		\item The Cavendish apparatus measures the gravitational force of test mass $M$  located at distance $r_0$ using a torsional pendulum.
 		\pause
-		\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
+		\item The mass attracts the two pendulum's masses; creating a net gravitational torques.
+		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
 		\pause
-		\item The mass $M$, located at distance $r_0$ from the pivot point attracts the two masses and creates gravitational torques.
+		%\item The mass $M$, located at distance $r_0$ from the pivot point attracts the two masses and creates gravitational torques.
 	\end{itemize}
 \end{frame}
 % frame 3
