--- a/Presentation.tex
+++ b/Presentation.tex
@@ -109,7 +109,7 @@
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
-		\item The Cavendish apparatus measures the gravitational force of test mass $M$  located at distance $r_0$ using a torsional pendulum.
+		\item Cavendish apparatus measures a test mass gravitational force using a torsional pendulum.
 		\pause
 		\item The mass attracts the two pendulum's masses; creating a net gravitational torques.
 		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
