--- a/Presentation.tex
+++ b/Presentation.tex
@@ -111,7 +111,10 @@
 	\begin{itemize}
 		\item Cavendish apparatus measures the test mass $M$ gravitational torque using a torsional pendulum.
 		\pause
-		\item The mass attracts both masses $m$; creating a net gravitational torques.
+		\item Mass $M$ attracts both masses $m$; creating a net gravitational torques.
+		\item The net torque: $\tau_g =  \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
+		\item Where $\theta$ is the tilt angle of the torsional pendulum and approximately $\theta_1 \approx \theta_2 = \theta$.
+
 		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
 		\pause
 		%\item The mass $M$, located at distance $r_0$ from the pivot point attracts the two masses and creates gravitational torques.
