--- a/Presentation.tex
+++ b/Presentation.tex
@@ -112,8 +112,8 @@
 		\item Cavendish apparatus measures the test mass $M$ gravitational torque using a torsional pendulum.
 		\pause
 		\item Mass $M$ attracts both masses $m$; creating a net gravitational torques.
-		\item The net torque: $\tau_g =  \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
-		\item Where $\theta$ is the tilt angle of the torsional pendulum and approximately $\theta_1 \approx \theta_2 = \theta$.
+		\item There are both gravitational torque and a restoring torque;.
+
 
 		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
 		\pause
