--- a/Presentation.tex
+++ b/Presentation.tex
@@ -112,7 +112,8 @@
 		\item Cavendish apparatus measures the test mass $M$ gravitational torque using a torsional pendulum.
 		\pause
 		\item Mass $M$ attracts both masses $m$; creating a net gravitational torques.
-		\item There are both gravitational torque and a restoring torque;.
+		\item There are both gravitational torque and a restoring torque.
+		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 
 		%\item The pendulum can be assumed to consist of two masses $m$ connected by a rigid, massless thin rod, with length of $2l$, and a pivot point at distance $l$ from each mass.
